tests/pos/i8042/Exception.java
public class Exception {
    public <T> Exception(T actual, T matcher) { }

    public <T> Object foo(T actual, T matcher) { return null; }

}
