tests/neg/t750/AO_1.java
public class AO_1 {
    public static <T> void f(T[] ar0) {
        if (ar0.length > 0) {
            System.out.println("hello, world");
        }
    }
}
